--- a/angular/package.json
+++ b/angular/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Try to understand angular 1",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:serve": "node server.js"
   },
   "author": "Damien Hanoun",
   "license": "ISC",
   "devDependencies": {
-    "angular": "^1.6.4"
+    "angular": "^1.6.4",
+    "express": "^4.15.2"
   }
 }
